# ddp-transcribe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.githooks/: pre-commit
docs/: FOLLOWUPS.md  SRC-BAKE-NOTES.md  SRC-RUNBOOK.md  bake-findings.md  cosmetic-followups.md
docs/archive/: followups-resolved.md
docs/decisions/: 0001-split-plan-a-into-per-task-files-for-cheaper-subagent-context.md  0002-dead-code-suppression-strategy-and-deferred-binary-library-restructuring.md  0003-test-discipline-for-plan-prescribed-code-and-deviations.md  0004-transcript-output-sharding-by-last-two-digits-of-video-id.md  0005-use-cargo-test-helpers-feature-for-library-items-needed-by-integration-tests.md  0006-store-mutators-return-result-of-usize-for-row-change-count.md  0007-stats-structs-use-input-side-counters-with-verb-named-fields.md  0008-pipeline-writes-transcript-artifacts-before-mark-succeeded-for-crash-recovery-durability.md  0009-use-whisper-rs-for-whisper-cpp-embedding-with-version-pin-and-fallback-policy.md  0010-json-artifact-raw-signals-schema-pass-through-with-schema-version.md  0011-spin-down-operational-practice-for-dev-workspace.md  0012-cooperative-cancellation-via-per-request-arc-atomicbool-and-abort-callback.md  0013-gpu-verification-at-startup-assert-backend-and-log-device-name.md  0014-audio-input-invariant-float32-pcm-16khz-mono-via-hound.md  0015-explicit-non-use-of-whisper-full-parallel.md  0016-architecture-for-parallelism-engine-api-stable-across-single-and-multi-state.md  0017-operational-done-contract-for-batch-validation.md  0018-three-tier-review-protocol-with-codex-advisor-delegated-via-sonnet-reviewer.md  0019-subagent-report-format-and-phase-boundary-controller-restart.md  0020-followups-four-file-split-with-archive-at-epic-close-and-unverified-hypothesis-marking.md  0021-bounded-subprocess-output-capture-via-streaming-vecdeque-u8.md  0022-schema-version-policy-hard-fail-at-store-open-migrate-via-dedicated-cli-subcommand.md  0023-minimum-mutator-signatures-kind-str-message-str-returning-result-usize-per-0006.md  0024-stale-claim-sweep-no-validation-no-attempt-count-bump-30-min-default-threshold.md  0025-bug-class-supervision-joinset-cancellationtoken-shutdown-order-is-load-bearing.md  0026-claim-contention-no-polling-for-plan-b-batch-drain-on-claim-next-none.md  0027-orchestrator-topology-n-3-fetch-1-transcribe-mpsc-payload-claim-vec-f32-pathbuf-capacity-2.md  index.yaml  (+6 more)
docs/followups/: cross-epic.md  epic-2.md  (+4 more)
scripts/: adr  adr-fill  bake-t10-compare.sh  bake-t10-no-timestamps.sh  fetch-large-v3-turbo-model.sh  fetch-tiny-model.sh  session-start-context  src-archive-results.sh  src-bootstrap.sh
src/: audio.rs  canonical.rs  cli.rs  config.rs  errors.rs  ingest.rs  lib.rs  main.rs  pipeline.rs  process.rs  transcribe.rs
tests/: canonical.rs  cli.rs  e2e_real_tools.rs  ingest.rs  pipeline_fakes.rs  process_bounded_capture.rs  state_claims.rs  state_ingest.rs  state_migrate.rs  state_open.rs  state_schema_v2.rs  state_schema_version.rs  transcribe_lang_state.rs  whisper_engine_init.rs
(+69 files in other folders)
