[package]
name = "ddp-transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
# Tracks whisper.cpp v1.8.3 (commit 2eeeba56e9edd762b4b38467bab96c2517163158) via whisper-rs-sys 0.15.0.
whisper-rs = { version = "=0.16.0", default-features = false }
hound = "3.5"
humantime = "2"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
cuda = ["whisper-rs/cuda"]
test-helpers = []

# Idiomatic-Rust gate (clippy --all-targets -- -D warnings). Curated explicit set
# rather than the `pedantic` group: pedantic is a one-time audit, not a good
# permanent merge gate (it turns prose/style nits into blockers). We gate only the
# lints that protect correctness or that we want mechanically normalized. Doc-prose
# lints (doc_markdown, missing_errors_doc, missing_panics_doc) and must_use_candidate
# are deliberately NOT enabled. `unwrap_used`/`expect_used` are scoped away from test
# code via crate-root `cfg_attr(any(test, feature="test-helpers"), allow(...))` in
# lib.rs/main.rs and an unconditional `allow` header in each tests/*.rs.
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
uninlined_format_args = "warn"
manual_let_else = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
needless_continue = "warn"
ignored_unit_patterns = "warn"
needless_raw_string_hashes = "warn"
# large_futures intentionally NOT gated: it fires on the once-per-video subprocess
# future (~34 KB) and in test code; boxing would add an allocation for no real win.

[[test]]
name = "state_ingest"
required-features = ["test-helpers"]

[[test]]
name = "state_claims"
required-features = ["test-helpers"]

[[test]]
name = "ingest"
required-features = ["test-helpers"]

[[test]]
name = "pipeline_fakes"
required-features = ["test-helpers"]

[[test]]
name = "e2e_real_tools"

[[test]]
name = "whisper_engine_init"
required-features = ["test-helpers"]

[[test]]
name = "transcribe_lang_state"
required-features = ["test-helpers"]

[[test]]
name = "process_bounded_capture"
required-features = ["test-helpers"]

[[test]]
name = "state_schema_version"
required-features = ["test-helpers"]

[[test]]
name = "state_schema_v2"
required-features = ["test-helpers"]

[[test]]
name = "state_migrate"
required-features = ["test-helpers"]
